[gd_scene load_steps=2 format=3 uid="uid://cr5hfv1dqg7u8"]

[ext_resource type="Script" path="res://scripts/logging_control.gd" id="1_t8knk"]

[node name="LoggingControl" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 12
script = ExtResource("1_t8knk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Log Level:"

[node name="LogLevelOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tabs_visible = false

[node name="All" type="MarginContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2

[node name="AllTextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/All"]
layout_mode = 2
editable = false
wrap_mode = 1

[node name="Info" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="InfoTextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/Info"]
layout_mode = 2
editable = false
wrap_mode = 1

[node name="Warnings" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="WarningTextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/Warnings"]
layout_mode = 2
editable = false
wrap_mode = 1

[node name="Errors" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ErrorTextEdit" type="TextEdit" parent="VBoxContainer/TabContainer/Errors"]
layout_mode = 2
editable = false
wrap_mode = 1
